# PROJECT-HIVEFUZZ

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
docs/: PLAN.md
docs/completed/: COMPLETED.md
docs/planning/: 18APR2026-roadmap-refresh.md  19APR2026-project-assessment-and-fuzzer-backends.md  19APR2026-top-10-fuzzer-survey.md  24MAR2026-sprint-1-implementation.md  25MAR2026-sprint-2-multi-node.md
docs/review/: 18APR2026-roadmap-refresh.md  19APR2026-project-assessment-and-fuzzer-backends.md
src/: config.rs  lib.rs  main.rs
src/commands/: dev.rs  init.rs  mod.rs  run.rs  status.rs
src/crash/: dedup.rs  mod.rs  scoring.rs
src/fuzzer/: afl.rs  corpus.rs  coverage.rs  mod.rs
src/gossip/: dissemination.rs  membership.rs  mod.rs  swim.rs  transport.rs
src/node/: identity.rs  mod.rs
src/proto/: mod.rs
src/strategy/: fitness.rs  mod.rs  mutator.rs
src/utils/: mod.rs
tests/: integration_test.rs
